Added the "Include Center Point" functionality as an optional config parameter. It will add a new field called CENTER_POINT of type Geometry which will enrich the center point of the Event Geometry Envelope to the event.

--- a/extent-enricher-processor/src/main/resources/com/esri/geoevent/processor/extent-enricher-processor.properties
+++ b/extent-enricher-processor/src/main/resources/com/esri/geoevent/processor/extent-enricher-processor.properties
@@ -3,6 +3,8 @@ PROCESSOR_LABEL=Geometry Extent Enricher Processor
 PROCESSOR_DESC=Enriches GeoEvents with the geometry's Extent (bounding box) as GeoEvent Attributes (MINX, MINY, MAXX, MAXY). Note: for points, MINX = MAXX and MINY = MAXY.
 PROCESSOR_GED_NAME_LBL=New GeoEvent Definition Name
 PROCESSOR_GED_NAME_DESC=Enter a name for the new GeoEvent Definition. If a name is entered, a new GeoEvent Definition will be created regardless of whether the output geometry field is an existing geometry field or not. If a name is not entered and the output geometry field is a new field, a new GeoEvent Definition will be created with a unique name.
+PROCESSOR_ADD_CENTER_PT_LBL=Include Center Point ?
+PROCESSOR_ADD_CENTER_PT_DESC=Include the center point of the geomtery as part of the field enrichment. If so, a new field of type GEOMETRY named CENTER_POINT will be added to the event.
 
 # Log Messages
 INIT_ERROR=Error setting up Geometry Extent Enricher Definition. Error: {0}.
