--- a/extent-enricher-processor/src/main/resources/com/esri/geoevent/processor/extent-enricher-processor.properties
+++ b/extent-enricher-processor/src/main/resources/com/esri/geoevent/processor/extent-enricher-processor.properties
@@ -1,14 +1,14 @@
 # Processor Definition
 PROCESSOR_LABEL=Geometry Extent Enricher Processor
-PROCESSOR_DESC=Enriches GeoEvents with the geometry's Extent (bounding box) as GeoEvent Attributes (MINX, MINY, MAXX, MAXY). Note: for points, MINX = MAXX and MINY = MAXY.
+PROCESSOR_DESC=Enriches GeoEvents with the geometry's Extent (bounding box) as GeoEvent Attributes (MinX, MinY, MaxX, MaxY). Note: for points, MinX = MaxX and MinY = MaxY.
 PROCESSOR_GED_NAME_LBL=New GeoEvent Definition Name
 PROCESSOR_GED_NAME_DESC=Enter a name for the new GeoEvent Definition. If a name is entered, a new GeoEvent Definition will be created regardless of whether the output geometry field is an existing geometry field or not. If a name is not entered and the output geometry field is a new field, a new GeoEvent Definition will be created with a unique name.
 PROCESSOR_ADD_CENTER_PT_LBL=Include Center Point ?
-PROCESSOR_ADD_CENTER_PT_DESC=Include the center point of the geomtery as part of the field enrichment. If so, a new field of type GEOMETRY named CENTER_POINT will be added to the event.
+PROCESSOR_ADD_CENTER_PT_DESC=Include the center point of the geometry as part of the field enrichment. If so, a new field of type GEOMETRY named CenterPoint will be added to the event.
 
 # Log Messages
 INIT_ERROR=Error setting up Geometry Extent Enricher Definition. Error: {0}.
 GED_EMPTY_ERROR=The New GeoEvent Definition Name is empty.
-GEOMETRY_EMPTY_MSG=Could not augment the geoevent with the extent values. The geoevent's geometry is empty.
+GEOMETRY_EMPTY_MSG=Could not augment the GeoEvent with the extent values. The geoevent's geometry is empty.
 FAILED_TO_DELETE_GED=Failed to delete the configured GeoEvent Definition on shutdown. GeoEvent Definition GUID: {0}. Error: {1}.
-ERROR_SETTING_EXTENT_FIELDS=Failed to set the fields MINX, MINY, MAXX, MAXY on the augmented GeoEvent. Error: {0}.
+ERROR_SETTING_EXTENT_FIELDS=Failed to set the fields MinX, MinY, MaxX, MaxY on the augmented GeoEvent. Error: {0}.
