--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.esri.geoevent.parent</groupId>
 	<artifactId>extent-enricher</artifactId>
-	<version>10.4.0</version>
+	<version>10.5.0</version>
 	<packaging>pom</packaging>
 
 	<name>Esri :: GeoEvent :: Processor :: Extent Enricher</name>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>com.esri.geoevent.sdk</groupId>
 			<artifactId>geoevent-sdk</artifactId>
-			<version>10.4.0</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
